--- a/css.html
+++ b/css.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="assets/js/syntaks.js"></script>
+    <script src="assets/js/map.js"></script>
 </head>
 <body>
     
